06_rect/grade.txt
Grading at Tue Jul 17 01:44:01 UTC 2018
Attempting to compile rectangle.c
rectangle.c: In function ‘canonicalize’:
rectangle.c:29:7: error: unused variable ‘height’ [-Werror=unused-variable]
   int height = r.height;
       ^
rectangle.c:28:7: error: unused variable ‘width’ [-Werror=unused-variable]
   int width = r.width;
       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
